# mcp-edit-text

./: .gitignore  README.md  example.html  main.py  pyproject.toml  server.py  test_client.py  test_regions.html
.roo/: mcp.json
