[project]
name = "mcp-edit-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "markdown>=3.7",
    "html2text>=2024.2.26"
]

[project.scripts]
mcp-edit-text = "server:mcp.run" # Creates a command 'mcp-edit-text' that runs the server

[tool.setuptools]
py-modules = ["server"] # Explicitly include only server.py
